--- a/sass/openeyes/__config-all.scss
+++ b/sass/openeyes/__config-all.scss
@@ -26,12 +26,15 @@ $oe-browser-size-activity-panel-fixed:	1800px; // this is based on the JS settin
 
 
 // z
-$oe-z-logo:				101;
+$oe-z-logo:				151;
+
+$oe-z-popup:			100;
+
 $oe-z-shortcuts:		99;
 $oe-z-activity:			95;
 $oe-z-quicklook:		90; // & demographics, allergies & risks
 $oe-z-element-search:	80; 
-$oe-z-popup:			70; 
+ 
 $oe-z-tooltip:			60;
 
 $oe-z-ed-v2: 			20; // ED v2 DOM			
